--- a/main.tex
+++ b/main.tex
@@ -507,7 +507,7 @@ Damit die Decodierung fehlerfrei Funktioniert, müssen die Codewörter auch noch
 \subsection{Speicher}
 \subsubsection{Begriffsklärung}
 \begin{itemize}
-    \item \important{Bit}: (Genau) ein Zeichen des Aplhabets $\set{\word{0},\word{1}}$
+    \item \important{Bit}: (Genau) ein Zeichen des Alphabets $\set{\word{0},\word{1}}$
     \item \important{Byte}: Ein Wort aus \textbf{8} Bits
     \item Ein Speicher hat zu jedem Zeitpunkt für jede \important{Adresse} Informationen, welcher \important{Wert} dort steht.\\
     Vorstellen, wie eine Tabelle mit zwei Spalten
